--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,5 +24,9 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   
   {% include favicons.html %}
+  
+  {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+  {% endif %}
 
 </head>
