cambio colores y letras

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,6 +1,6 @@
 body.home .page-content {
 	padding-top:6px;
-	background-color: #D49198;
+	background-color: #7794F0;
 }
 
 body.home .wrapper {
@@ -15,17 +15,17 @@ div.presentation {
 }
 
 div.presentation p {
-	font-size:10px;
+	font-size:14px;
 	text-align:center;
 	text-transform:uppercase;
 	font-weight:bold;
-	letter-spacing:14px;
+	letter-spacing:16px;
 	color:white;
 }
 
 div.presentation h1 {
-	font-size:10px;
-	letter-spacing:14px;
+	font-size:11px;
+	letter-spacing:17px;
 	text-transform:uppercase;
 	font-weight:bold;
 	text-align:center;
