--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,10 @@
           <li><a href="{{ site.url }}">{{ site.title }}</a></li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
-      <img src="{{ site.baseurl }}/img/footer_img.jpg" alt="Sad Cloud">        
+      <a title="Comprar / Buy" href="{{ site.url }}/prints.html">
+        <img src="{{ site.baseurl }}/img/footer_img.jpg" alt="Sad Cloud">        
+      </a>
+      <p><a href="{{ site.url }}/prints.html">Comprar / buy comics.</a></p>
       </div>
 
       <div class="footer-col footer-col-3">
