--- a/_layouts/prints.html
+++ b/_layouts/prints.html
@@ -7,7 +7,7 @@ layout: prints
 
   {% include head.html %}
 
-  <body {% if page.background %} style="background-color: {{ page.background }}" {% endif %}>
+  <body class="prints" {% if page.background %} style="background-color: {{ page.background }}" {% endif %}>
 
     {% include header.html %}
 
