--- a/css/main.scss
+++ b/css/main.scss
@@ -52,5 +52,5 @@ $on-laptop:        800px;
         "syntax-highlighting",
         "comic",
         "home",
-        "../fonts/caviardreams_regular_macroman/stylesheet.css"
+        "prints"
 ;
