--- a/_sass/_comic.scss
+++ b/_sass/_comic.scss
@@ -91,3 +91,15 @@ article.comic img {
 article.comic .comic-images {
 	margin:0 auto;
 }
+
+a.buylink {
+	display:block;
+	padding:6px;
+	color:white;
+	background-color: #D49198;
+	width:200px;
+	text-decoration:none;
+	margin:0 auto;
+	font-size:12px;
+	border-radius:5px;
+}
