ajustes movil tienda

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,11 @@
               <li><a href="{{ link.url }}" title="{{ link.name }}">{{ link.name }}</a></li>
           {% endfor %}
         </ul>
+
+      <p class="finalwarn">
+        Made with <a href="https://jekyllrb.com">Jekyll</a>. <br>
+        Hosted on <a href="https://pages.github.com">Github pages</a>.
+      </p>
       </div>
     </div>
 
