--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
       <ul class="contact-list">
           <li><a href="{{ site.url }}">{{ site.title }}</a></li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="http://instagram.com/{{ site.instagram }}">instagram: {{ site.instagram }}</a></li>
         </ul>
       <a title="Comprar / Buy" href="{{ site.url }}/prints.html">
         <img src="{{ site.baseurl }}/img/footer_img.jpg" alt="Sad Cloud">        
