new comics and header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
 <header class="site-header">
-  
+    <a href="{{site.url}}">
+        <img src="{{site.url}}/img/hj.png" alt="Pablo Selín - Comics">
+        <h1>Pablo Selín - Comics &amp; desolation</h1>
+    </a>
 </header>
