ajuste y limpieza inicial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="site-header">
     <a href="{{site.url}}">
         <img src="{{site.url}}/img/hj.png" alt="Pablo Selín - Comics">
-        <h1>Pablo Selín - Comics &amp; desolation</h1>
+        <h1>Pablo Selín - Comics</h1>
     </a>
 </header>
+<div class="apariciones"> <p> <span class="fecha">7 y 8 de Octubre</span> - <strong>Dibujona</strong> - Antofagasta, Chile </p> </div>
