--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,6 +18,21 @@
     }
 }
 
+.apariciones {
+    background-color:#000;
+    padding:4px 0;
+    p {
+        color:white;
+        margin-bottom:0;
+        font-size:14px;
+        text-align:center;
+        .fecha {
+            color:#7794F0;
+            text-transform:uppercase;
+        }
+    }
+}
+
 .site-header span {
     color:white;
     font-size:12px;
