initial commit for memories branch

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,6 +51,7 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "comic",
+        "memory",
         "home",
         "prints"
 ;
