--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,20 +9,9 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  {% if page.foreground %}
-	<style>
-		article.comic {
-			color: {{page.foreground}}
-		}
-	</style>
-  {% endif %}
-
-	<script type="text/javascript" src="{{ "/js/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
-	<script type="text/javascript" src="{{ "/js/masonry.pkgd.min.js" | prepend: site.baseurl }}"></script>
-
-  <script src="https://use.typekit.net/agq7tco.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   
+  <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+
   {% include favicons.html %}
   
   {% if jekyll.environment == 'production' %}
