--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="comic" itemscope itemtype="http://schema.org/BlogPosting" style="background-color:{{ page.background }}">
+<article class="comic" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="comic-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
