--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: default
 
   {% include head.html %}
 
-  <body {% if page.background %} style="background-color: {{ page.background }}" {% endif %}>
+  <body>
 
     {% include header.html %}
 
