--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,6 +83,8 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
+    font-family: $headings-font-family;
+    color: $brand-color;
 }
 
 
@@ -160,8 +162,8 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    // padding-right: $spacing-unit;
+    // padding-left: $spacing-unit;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
@@ -202,5 +204,24 @@ pre {
         path {
             fill: $grey-color;
         }
+    }
+}
+
+ul {
+    padding:0;
+    margin:24px 0;
+    li {
+        list-style:none;
+        margin:0;
+        padding:0;
+    }
+}
+
+.twocols {
+    width:100%;
+    overflow:hidden;
+    .col {
+        width:50%;
+        float:left;
     }
 }
