--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,8 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: sans-serif;
+$headings-font-family: 'Raleway Dots', sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -14,16 +15,16 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #555;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #F09C29;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    1000px;
+$content-width:    1200px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -48,10 +49,16 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
-        "syntax-highlighting",
-        "comic",
-        "memory",
-        "home",
-        "prints"
+        "grid",
+        "animate",
+        "header",
+        "panel",
+        "comics-list",
+        "drawing"
 ;
+
+body.home {
+    background:url(../site_imgs/bg_01.jpg) no-repeat center center fixed;
+    background-size:cover;
+    height:100%;
+}
