--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
             <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
             <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Dibujos</a></li>
             <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">datos</a></li>
+            <li {% if page.url == '/series.html' %} class="active" {% endif %}><a href="{{site.url}}/series.html">txexex</a></li>
         </ul>
     </nav>
 </header>
