xexex 03 y menu movil

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,10 @@
 <footer class="site-footer">
 
 </footer>
+<script>
+        var trigger = document.getElementById('trigger-nav');
+        var menu = document.getElementById('mobile-menu')
+        trigger.addEventListener('click', function(event) {
+          menu.classList.toggle('active');
+        });
+</script>
