--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -62,9 +62,59 @@ header.site-header {
     }
 }
 
+.mobile-nav {
+    display:none;
+}
+
 @media screen and (max-width:$on-palm) {
     header.site-header {
+        overflow:visible;
+        padding:6px 0 0 12px;
+        min-height:60px;
+        .mobile-trigger:focus,
+        .mobile-trigger:hover,
+        .mobile-trigger:active
+        {
+            text-decoration:none;
+        }
+
+        .mobile-nav {
+            width:70px;
+            display:block;
+            text-align:right;
+            position: absolute;
+            right:2px;
+            top:2px;
+            padding:6px;
+            margin:6px 5px 0 0;
+            border:1px solid white;
+            transition:all ease-in 0.3s;
+            background-color:white;
+            height:28px;
+            overflow:hidden;
+            &.active {
+                height:160px;
+                width:100px;
+                background-color:#f09c29;
+                a {
+                    color:white;
+                }
+            }
+            .hidden-nav {
+                margin:0;
+                padding:0;
+                text-transform:lowercase;
+                li {
+                    a {
+                        padding:6px 0;
+                        display:block;
+                    }
+                }
+                //height:0;
+            }
+        }
         nav.main-nav {
+            display:none;
             float: none;
             clear: both;
             padding-top:12px;
