--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -71,6 +71,9 @@ header.site-header {
         overflow:visible;
         padding:6px 0 0 12px;
         min-height:60px;
+        .mobile-trigger {
+            text-shadow:0 1px 1px #555;
+        }
         .mobile-trigger:focus,
         .mobile-trigger:hover,
         .mobile-trigger:active
