--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -71,9 +71,7 @@ header.site-header {
         overflow:visible;
         padding:6px 0 0 12px;
         min-height:60px;
-        .mobile-trigger {
-            text-shadow:0 1px 1px #555;
-        }
+
         .mobile-trigger:focus,
         .mobile-trigger:hover,
         .mobile-trigger:active
@@ -90,17 +88,17 @@ header.site-header {
             top:2px;
             padding:6px;
             margin:6px 5px 0 0;
-            border:1px solid white;
             transition:all ease-in 0.3s;
             background-color:white;
+            border:1px solid white;
             height:28px;
             overflow:hidden;
             &.active {
-                height:160px;
+                height:130px;
                 width:100px;
-                background-color:#f09c29;
+                border:1px solid #F09C29;
                 a {
-                    color:white;
+                    color:#F09C29;
                 }
             }
             .hidden-nav {
