--- a/_sass/comics-list.scss
+++ b/_sass/comics-list.scss
@@ -2,7 +2,7 @@
     margin-bottom:24px;
     overflow:hidden;
     .date {
-        font-size:10px;
+        font-size:12px;
         color:#ccc;
     }
     img {
@@ -19,7 +19,7 @@ h2.comic-title {
     margin-bottom:0;
     line-height:48px;
     a {
-        color:#333;
+        color:#362A2A;
         &:hover {
             text-decoration:none;
             color:#F09C29;
