--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: sans-serif;
-$headings-font-family: 'Raleway Dots', sans-serif;
+$headings-font-family: 'Raleway', sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
