--- a/css/main.scss
+++ b/css/main.scss
@@ -61,4 +61,10 @@ body.home {
     background:url(../site_imgs/bg_01.jpg) no-repeat center center fixed;
     background-size:cover;
     height:100%;
+    min-height:100%;
+}
+
+html {
+    height:100%;
+    min-height:100%;
 }
