ajustes serie y txexex 07

--- a/_sass/comics-list.scss
+++ b/_sass/comics-list.scss
@@ -39,3 +39,12 @@ h2.comic-title {
         }
     }
 }
+
+.series-title {
+    text-align:center;
+}
+
+.daily-list-item {
+    max-width:800px;
+    margin:0 auto;
+}
