comics y dibujos nuevos

--- a/_layouts/drawing.html
+++ b/_layouts/drawing.html
@@ -4,7 +4,7 @@ layout: default
 <article class="drawing" itemscope itemtype="http://schema.org/BlogPosting">
 
     <figure>
-        <img src="{{site.baseurl}}/dib_imgs/{{page.slug}}_full.jpg" alt="{{page.title}}">  
+        <img src="{{site.baseurl}}/dib_imgs/{{page.slug}}_full.{{page.format}}" alt="{{page.title}}">  
         <figcaption>
             <h1 class="post-title" itemprop="name headline">{{ page.title }} - {{page.date | date: '%Y'}} </h1>
             <p class="data">{{page.material}}</p>
