--- a/_sass/drawing.scss
+++ b/_sass/drawing.scss
@@ -2,6 +2,9 @@
 
 .drawing {
     figure {
+        img {
+            border:1px solid #f0f0f0;
+        }
         h1 {
             margin-top:24px;
             margin-bottom:0;
