--- a/css/main.scss
+++ b/css/main.scss
@@ -54,7 +54,8 @@ $on-laptop:        800px;
         "header",
         "panel",
         "comics-list",
-        "drawing"
+        "drawing",
+        "single-comic"
 ;
 
 body.home {
