--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
   
   {% if page.slug %}
 
-  <meta content="{{site.baseurl}}/img/{{page.slug}}.jpg" property="og:image">
+  <meta content="{{site.url}}/img/{{page.slug}}.jpg" property="og:image">
   
 
   {% endif %}
