--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header class="site-header {% if page.url == '/'' %} animated fadeInDown {% endif %}">
+    <div class="header-wrapper">
     <a href="{{site.url}}">
         <img class="site-logo" width="40" src="{{site.url}}/site_imgs/ps_icon.png" alt="">
         <h1>Pablo Selín</h1>
@@ -6,16 +7,17 @@
     <nav class="main-nav">
         <ul>
             <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
-            <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Dibujos</a></li>
-            <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">datos</a></li>
+            <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Drawings</a></li>
+            <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">data</a></li>
         </ul>
     </nav>
     <nav id="mobile-menu" class="mobile-nav">
     <a id="trigger-nav" href="#" class="mobile-trigger">&gt; menu</a>
     <ul class="hidden-nav">
         <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
-        <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Dibujos</a></li>
-        <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">datos</a></li>
+        <li {% if page.url == '/Drawings.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">drawings</a></li>
+        <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">data</a></li>
     </ul>
     </nav>
+    </div>
 </header>
