--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,61 +1,65 @@
-
 header.site-header {
-    padding:12px $spacing-unit;
-    max-width:$content-width - ($spacing-unit * 2);
     font-family: $headings-font-family;
-    margin:0 auto 12px auto;
-    overflow:hidden;
+    overflow: hidden;
     position: relative;
+    background-color: white;
+    width: 100%;
+    .header-wrapper {
+        max-width: $content-width - ($spacing-unit * 2);
+        margin: 0 auto 0 auto;
+        overflow: hidden;
+        padding: 6px $spacing-unit;
+    }
     .site-logo {
         float: left;
-        margin-right:6px;
+        margin-right: 6px;
     }
 
     h1 {
-        font-size:18px;
+        font-size: 18px;
         //text-transform:lowercase;
-        line-height:40px;
-        vertical-align:middle;
-        letter-spacing:2px;
-        color:#333;
-        font-weight:900;
-        float:left;
-        margin:0;
+        line-height: 40px;
+        vertical-align: middle;
+        letter-spacing: 2px;
+        color: #333;
+        font-weight: 900;
+        float: left;
+        margin: 0;
         a {
-            color:#333;
+            color: #333;
         }
     }
 
     nav.main-nav {
-        float:right;
+        float: right;
         ul {
-            margin:0 0 0 0;
-            padding:0;
-            overflow:hidden;
+            margin: 0 0 0 0;
+            padding: 0;
+            overflow: hidden;
             li {
-                list-style:none;
-                display:inline-block;
-                margin:0;
-                padding:0;
-                float:left;
+                list-style: none;
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+                float: left;
                 a {
-                    font-size:18px;
-                    color:#555;
-                    line-height:40px;
+                    font-size: 18px;
+                    color: #555;
+                    line-height: 40px;
                     display: block;
-                    padding:0 12px;
-                    text-transform:lowercase;
+                    padding: 0 12px;
+                    text-transform: lowercase;
                     float: left;
                     vertical-align: middle;
-                    background-color:rgba(255,255,255, 0.8);
+                    background-color: rgba(255, 255, 255, 0.8);
                     &:hover {
-                        text-decoration:none;
-                        color:#F09C29;
+                        text-decoration: none;
+                        color: #f09c29;
                     }
                 }
                 &.active a {
-                    color:#F09C29;
-                    border-top:1px solid #F09C29;
+                    color: #f09c29;
+                    border-top: 1px solid #f09c29;
                 }
             }
         }
@@ -63,64 +67,63 @@ header.site-header {
 }
 
 .mobile-nav {
-    display:none;
+    display: none;
 }
 
-@media screen and (max-width:$on-palm) {
+@media screen and (max-width: $on-palm) {
     header.site-header {
-        overflow:visible;
-        padding:6px 0 0 12px;
-        min-height:60px;
+        overflow: visible;
+        padding: 6px 0 0 12px;
+        min-height: 60px;
 
         .mobile-trigger:focus,
         .mobile-trigger:hover,
-        .mobile-trigger:active
-        {
-            text-decoration:none;
+        .mobile-trigger:active {
+            text-decoration: none;
         }
 
         .mobile-nav {
-            width:70px;
-            display:block;
-            text-align:right;
+            width: 70px;
+            display: block;
+            text-align: right;
             position: absolute;
-            right:2px;
-            top:2px;
-            padding:6px;
-            margin:6px 5px 0 0;
-            transition:all ease-in 0.3s;
-            background-color:white;
-            border:1px solid white;
-            height:28px;
-            overflow:hidden;
+            right: 2px;
+            top: 2px;
+            padding: 6px;
+            margin: 6px 5px 0 0;
+            transition: all ease-in 0.3s;
+            background-color: white;
+            border: 1px solid white;
+            height: 28px;
+            overflow: hidden;
             &.active {
-                height:130px;
-                width:100px;
-                border:1px solid #F09C29;
+                height: 130px;
+                width: 100px;
+                border: 1px solid #f09c29;
                 a {
-                    color:#F09C29;
+                    color: #f09c29;
                 }
             }
             .hidden-nav {
-                margin:0;
-                padding:0;
-                text-transform:lowercase;
+                margin: 0;
+                padding: 0;
+                text-transform: lowercase;
                 li {
                     a {
-                        padding:6px 0;
-                        display:block;
+                        padding: 6px 0;
+                        display: block;
                     }
                 }
                 //height:0;
             }
         }
         nav.main-nav {
-            display:none;
+            display: none;
             float: none;
             clear: both;
-            padding-top:12px;
+            padding-top: 12px;
             ul li.active a {
-                border-top:0;
+                border-top: 0;
             }
         }
     }
