--- a/css/main.scss
+++ b/css/main.scss
@@ -1,71 +1,47 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
-@charset "utf-8";
 
-
-
-// Our variables
+@charset "utf-8"; // Our variables
 $base-font-family: sans-serif;
-$headings-font-family: 'Raleway', sans-serif;
-$base-font-size:   16px;
+$headings-font-family: "Raleway", sans-serif;
+$base-font-size: 16px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #555;
+$spacing-unit: 30px;
+$text-color: #555;
 $background-color: #fdfdfd;
-$brand-color:      #F09C29;
-
-$grey-color:       #828282;
+$brand-color: #f09c29;
+$grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    1200px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
+$grey-color-dark: darken($grey-color, 25%); // Width of the content area
+$content-width: 1200px;
+$on-palm: 600px;
+$on-laptop: 800px; // Use media queries like this: // @include media-query($on-palm) { // .wrapper { // padding-right: $spacing-unit / 2; // padding-left: $spacing-unit / 2; // } // }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
     }
-}
-
-
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "grid",
-        "animate",
-        "header",
-        "panel",
-        "comics-list",
-        "drawing",
-        "single-comic"
-;
-
+} // Import partials from `sass_dir` (defaults to `_sass`)
+@import "base", "grid", "animate", "header", "panel", "comics-list", "drawing",
+    "single-comic";
 body.home {
-    background:url(../site_imgs/bg_01.jpg) no-repeat center center fixed;
-    background-size:cover;
-    height:100%;
-    min-height:100%;
+    background: url(../site_imgs/bg_03.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    min-height: 100%;
 }
-
 html {
-    height:100%;
-    min-height:100%;
+    height: 100%;
+    min-height: 100%;
+}
+.caption {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 12px;
+    background-color: white;
+    padding: 2px 6px;
+    color: #555;
 }
