--- a/_sass/outpost.scss
+++ b/_sass/outpost.scss
@@ -6,17 +6,23 @@ body.outpost {
   background-repeat: no-repeat;
   background-size: cover;
 
+  @media screen and (max-width: 768px) {
+    background-size: auto;
+  }
+
   .page-content {
-    padding: 24px;
+    padding: 48px 0 24px 0;
     
-    a {
+    a.downlink {
       display: inline-block;
-      padding: 12px 24px;
+      padding: 12px 12px;
       color: white;
       background-color: #D30065;
-      border-radius: 3px;
+      border-radius: 12px;
       margin-bottom: 6px;
-      
+      font-family: 'Raleway', sans-serif;
+      font-size: 14px;
+      font-weight: 600;
       &:hover {
         background-color: darken(#D30065, 6%);
         text-decoration: none;
@@ -31,10 +37,8 @@ body.outpost {
   }
 
   .lib-wrap-top {
-    width: 600px;
+    width: 315px;
     margin: 0 auto;
-    margin-right: 100px;
-    height: 500px;
   }
 
   
@@ -69,6 +73,27 @@ body.outpost {
     }
   }
 
+  .lib-back {
+    transition: all ease-in 0.5s;
+    transform-style: preserve-3d;
+    transform-origin: 0% 50%;
+    transform: rotate3d(0,1,0,35deg);
+    z-index: 6;
+    box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 3px;
+      bottom: 0;
+      width: 3px;
+      background: rgba(0,0,0,0.06);
+      box-shadow: 1px 0 3px rgba(255, 255, 255, 0.1);
+      border-radius: 0 6px 6px 0;
+    }
+  }
+
   .lib-left {
     background-repeat: no-repeat;
     background-size: cover;
@@ -82,14 +107,6 @@ body.outpost {
     }
   }
 
-  .lib-back {
-    transform-style: preserve-3d;
-    transform-origin: 0% 50%;
-    transform: rotate3d(0, 1, 0, 35deg);
-    z-index: 6;
-
-  }
-
   @media screen and (max-width: 768px) {
     .page-content {
       a {
@@ -98,4 +115,288 @@ body.outpost {
       }
     }
   }
+}
+
+div.infozone {
+  background-color: rgba(0,0,0, 0.65);
+  border-radius: 5px;
+  padding: 6px;
+}
+
+.bk-list {
+  list-style: none;
+  position: relative;
+}
+
+.bk-list li {
+  position: relative;
+  width: 320px;
+  float: left;
+  z-index: 1;
+  margin: 0px 50px 40px 0;
+  -webkit-perspective: 1800px;
+  perspective: 1800px;
+}
+
+.bk-list li:last-child {
+  margin-right: 0;
+}
+
+.bk-info {
+  position: relative;
+  margin-top: 420px;
+}
+
+.bk-info button {
+  background: #333;
+  border: none;
+  color: #fff;
+  display: inline-block;
+  padding: 12px 15px;
+  font-weight: normal;
+  font-size: 14px;
+  cursor: pointer;
+  margin: 4px 0 16px 0;
+  border-radius: 12px;
+
+  &:hover {
+    background-color: #000;
+  }
+}
+
+.bk-info button.bk-active,
+.bk-info button:active {
+  box-shadow: 
+    0 1px 0 rgba(255, 255, 255, 0.8), 
+    inset 0 -1px 1px rgba(0,0,0,0.2);
+}
+
+.no-touch .bk-info button:hover,
+.bk-info button.bk-active {
+  background: #d0544e;
+}
+
+.bk-list li .bk-book {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform .5s;
+  transition: transform .5s;
+}
+
+.bk-list li .bk-book.bk-bookdefault:hover {
+  -webkit-transform: rotate3d(0,1,0,35deg);
+  transform: rotate3d(0,1,0,35deg);
+}
+
+.bk-list li .bk-book > div,
+.bk-list li .bk-front > div {
+  display: block;
+  position: absolute;
+}
+
+.bk-list li .bk-front {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform-origin: 0% 50%;
+  transform-origin: 0% 50%;
+  -webkit-transition: -webkit-transform .5s;
+  transition: transform .5s;
+  -webkit-transform: translate3d(0,0,12px);
+  transform: translate3d(0,0,12px);
+  z-index: 10;
+}
+
+.bk-list li .bk-front > div {
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.bk-list li .bk-page {
+  -webkit-transform: translate3d(0,0,11px);
+  transform: translate3d(0,0,11px);
+  display: none;
+  width: 295px;
+  height: 390px;
+  top: 5px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  z-index: 9;
+}
+
+.bk-list li .bk-front,
+.bk-list li .bk-back,
+.bk-list li .bk-front > div {
+  width: 315px;
+  height: 400px;
+}
+
+.bk-list li .bk-left,
+.bk-list li .bk-right {
+  width: 20px;
+  left: -10px;
+}
+
+.bk-list li .bk-top,
+.bk-list li .bk-bottom {
+  width: 295px;
+  height: 40px;
+  top: -15px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.bk-list li .bk-back {
+  -webkit-transform: rotate3d(0,1,0,-180deg) translate3d(0,0,9px);
+  transform: rotate3d(0,1,0,-180deg) translate3d(0,0,9px);
+  box-shadow: 10px 10px 30px rgba(0,0,0,0.3);
+  border-radius: 3px 0 0 3px;
+}
+
+.bk-list li .bk-cover-back {
+  background-color: #000;
+  -webkit-transform: rotate3d(0,1,0,-179deg);
+  transform: rotate3d(0,1,0,-179deg);
+}
+
+.bk-list li .bk-right {
+  height: 390px;
+  top: 5px;
+  -webkit-transform: rotate3d(0,1,0,90deg) translate3d(0,0,295px);
+  -moz-transform: rotate3d(0,1,0,90deg) translate3d(0,0,295px);
+  transform: rotate3d(0,1,0,90deg) translate3d(0,0,295px);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.bk-list li .bk-left {
+  height: 400px;
+  -webkit-transform: rotate3d(0,1,0,-90deg);
+  transform: rotate3d(0,1,0,-90deg);
+}
+
+.bk-list li .bk-top {
+  -webkit-transform: rotate3d(1,0,0,90deg);
+  transform: rotate3d(1,0,0,90deg);
+}
+
+.bk-list li .bk-bottom {
+  -webkit-transform: rotate3d(1,0,0,-90deg) translate3d(0,0,390px);
+  transform: rotate3d(1,0,0,-90deg) translate3d(0,0,390px);
+}
+
+/* Transform classes */
+
+.bk-list li .bk-viewinside .bk-front {
+  -webkit-transform: translate3d(0,0,20px) rotate3d(0,1,0,-160deg);
+  transform: translate3d(0,0,20px) rotate3d(0,1,0,-160deg);
+}
+
+.bk-list li .bk-book.bk-viewinside {
+  -webkit-transform: translate3d(0,0,150px) rotate3d(0,1,0,0deg);
+  transform: translate3d(0,0,150px) rotate3d(0,1,0,0deg);
+}
+
+.bk-list li .bk-book.bk-viewback {
+  -webkit-transform: translate3d(0,0,0px) rotate3d(0,1,0,180deg);
+  transform: translate3d(0,0,0px) rotate3d(0,1,0,180deg);
+}
+
+/* Main colors and content */
+
+.bk-list li .bk-page,
+.bk-list li .bk-right,
+.bk-list li .bk-top,
+.bk-list li .bk-bottom {
+  background-color: #fff;
+}
+
+.bk-list li .bk-front > div {
+  border-radius: 0 3px 3px 0;
+  box-shadow: 
+    inset 4px 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.bk-list li .bk-front:after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  bottom: 1px;
+  left: -1px;
+  width: 1px;
+}
+
+.bk-list li .bk-cover:after,
+.bk-list li .bk-back:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 10px;
+  bottom: 0;
+  width: 3px;
+  background: rgba(0,0,0,0.06);
+  box-shadow: 1px 0 3px rgba(255, 255, 255, 0.1);
+}
+
+.bk-list li .bk-back:after {
+  left: auto;
+  right: 10px;
+}
+
+
+/* Individual style & artwork */
+
+/* Book 1 */
+.book-1 .bk-front > div,
+.book-1 .bk-back,
+.book-1 .bk-left,
+.book-1 .bk-front:after {
+  background-color: #ff924a;
+}
+
+.book-1 .bk-cover {
+  background-image: url(../site_imgs/outpost/outpost_portada.jpg); 
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.book-1 .bk-left {
+  background-image: url(../site_imgs/outpost/outpost_lomo.png); 
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.book-1 .bk-back {
+  background-image: url(../site_imgs/outpost/outpost_contratapa.jpg); 
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.book-1 .bk-cover h2 span:first-child {
+  display: block;
+}
+
+
+
+
+/* Fallbacks */
+
+.no-csstransforms3d .bk-list li .bk-book > div,
+.no-csstransforms3d .bk-list li .bk-book .bk-cover-back {
+  display: none;
+}
+
+.no-csstransforms3d .bk-list li .bk-book > div.bk-front {
+  display: block;
+}
+
+.no-csstransforms3d .bk-info button,
+.no-js .bk-info button {
+  display: none;
 }
