--- a/_layouts/outpost.html
+++ b/_layouts/outpost.html
@@ -36,7 +36,7 @@
             <div class="bk-info">
               <button class="bk-bookback"><i class="fas fa-exchange-alt"></i></button>
               <p><a class="downlink" download="outpost_1.pdf" href="http://static.pablosel.in/pablosel.in/outpost/outpost_1.pdf"><i class="fas fa-download"></i> Download PDF</a>
-        <a class="downlink" download="outpost_1.cbr" href="http://static.pablosel.in/pablosel.in/outpost/outpost_1.cbr"><i class="fas fa-download"></i> Download CBR</a></p>
+        <a class="downlink" download="outpost_1.cbr" href="http://static.pablosel.in/pablosel.in/outpost/outpost_1.cbr"><i class="fas fa-download"></i> Download CBR</a><br/><a class="downlink" download="outpost_1_150dpi.pdf" href="http://static.pablosel.in/pablosel.in/outpost/outpost_1_150dpi.pdf"><i class="fas fa-download"></i> Download PDF (low res)</a></p>
         <div class="infozone">
         <p class="infop">84 páginas - español con subtítulos en inglés - gratis</p>
         <p class="infop">84 pages - spanish with english subtitles - free</p>
