--- a/_layouts/drawing.html
+++ b/_layouts/drawing.html
@@ -7,7 +7,7 @@ layout: default
         <img src="{{site.baseurl}}/dib_imgs/{{page.slug}}_full.{{page.format}}" alt="{{page.title}}">  
         <figcaption>
             <h1 class="post-title" itemprop="name headline">{{ page.title }} - {{page.date | date: '%Y'}} </h1>
-            <p class="data">{{page.material}}</p>
+            <p class="data">{{page.dimensiones}} - {{page.material}}</p>
         </figcaption>
     </figure>
 	
