--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -24,6 +24,12 @@
 
         {% endfor %}
 
+        <div class="wrapper">
+          <div class="content-infull">
+            {{ page.extratext }}
+          </div>
+        </div>
+
          <div class="wrapper-mini">
           <div class="images-rest">
             {% for image in page.images %}
@@ -45,6 +51,8 @@
             <span class="year">{{ page.year }}</span>
             <h1>{{ page.title }}</h1>
             {{ page.content }}
+
+            {{ page.extratext }}
           </div>
         </div>
         
