incas intro in english

--- a/_layouts/incas.html
+++ b/_layouts/incas.html
@@ -15,6 +15,12 @@
       <h2>Carlos Acuña - Felipe Zilleruelo - Rodrigo Uriví - Pablo Selín</h2>
     </div>
 
+    <div class="incasdesc">
+      <div class="wrapper">
+        <p>Incas of Emergency was an art collective that worked in the Chilean and international art scene from 2004 till around the year 2011. Initially founded by 4 art school friends (Felipe Zilleruelo, Rodrigo Uriví, Francisca Corvera and Pablo Selín) and joined later by the filmmaker Carlos Acuña. Incas of Emergency made shows in the most important Chilean art museums (Museo de Arte Contemporáneo, Museo Nacional de Bellas Artes) and in some international shows in Italy, Uruguay, Spain, France and Israel.</p>
+      </div>
+    </div>
+
     <div class="videostripe">
       <div class="wrapper">
         <div class="halfzone">
