--- a/_layouts/ii.html
+++ b/_layouts/ii.html
@@ -29,6 +29,7 @@ layout: ii
     <div class="page-content">
       <p>
         <img class="site-logo" width="400" src="{{site.url}}/dib_imgs/iiguy.png" alt="">
+        <iframe src="https://minnit.chat/ii?embed&nickname=" style="border:none;width:90%;height:500px;" allowTransparency="true"></iframe><br><a href="https://minnit.chat/ii" target="_blank">HTML5 Chatroom powered by Minnit Chat</a>
       </p>
       <div class="wrapper">
         {{ content }}
