--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,7 @@ $on-laptop: 800px; // Use media queries like this: // @include media-query($on-p
     }
 } // Import partials from `sass_dir` (defaults to `_sass`)
 @import "base", "grid", "animate", "header", "panel", "comics-list", "drawing",
-    "single-comic", "outpost", "incas", "series";
+    "single-comic", "outpost", "incas", "series", "muestra";
 body.home {
     background: url(../site_imgs/endless_view.jpg) no-repeat center center fixed;
     background-size: cover;
