--- a/_sass/muestra.scss
+++ b/_sass/muestra.scss
@@ -1,4 +1,15 @@
 
+.cvmuestra {
+	margin: 48px 0;
+	padding: 48px 0;
+	border-top: 1px dashed red;
+	border-bottom: 1px dashed red;
+	h2, h3, h4 {
+		color: red;
+		font-weight: bold;
+	}
+}
+
 .muestras-trueno {
 	display: flex;
 	margin: 24px 0;
@@ -21,16 +32,23 @@
 }
 
 p.desc {
-	font-style: italic;
-	text-align: center;
+	font-style: normal;
+	text-align: left;
 	margin-bottom: 24px;
 	padding-bottom: 24px;
 	border-bottom: 1px dashed red;
+
+	strong {
+		font-weight: normal;
+		color: red;
+		display: block;
+		margin-bottom: 6px;
+	}
 }
 
 span.help,
 a.help {
-	font-style: italic;
+	font-style: normal;
 	color: red;
 }
 
@@ -40,4 +58,12 @@ ul.list-skills {
 		list-style: disc;	
 	}
 	
+}
+
+@media screen and (max-width: 768px) {
+	.video-trolley {
+		video {
+			max-width: 100%;
+		}
+	}
 }
