cabeza y sacada seccion dibujos

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,10 @@
         {{ content }}
       </div>
     </div>
+    
+    <video id="videoBG" autoplay muted loop>
+      <source src="videos/cabeza.m4v" type="video/mp4">
+    </video>
 
     {% include footer.html %}
 
