--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -232,3 +232,39 @@ ul {
         padding-top:24px;
     }
 }
+
+html,body {
+    width:100vw;
+    height: 100vh;
+    margin: 0;
+}
+#videoBG {
+    position:fixed;
+    top: -60px;
+    z-index: -1;
+}
+@media (min-aspect-ratio: 16/9) {
+    #videoBG {
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    #videoBG { 
+        width:auto;
+        height: 100%;
+    }
+}
+@media (max-width: 767px) {
+    #videoBG {
+        //display: none;
+        width: auto;
+        height: 100%;
+        left: -80%;
+        top: 0;
+    }
+    body {
+        background: url('poster.jpg');
+        background-size: cover;
+    }
+}
