sacada seccion drawing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <ul>
             <li {% if page.url == '/works.html' %} class="active" {% endif %}><a href="{{site.url}}/works.html">Works</a></li>
             <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
-            <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Drawings</a></li>
+            <!-- <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Drawings</a></li> -->
             <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">data</a></li>
         </ul>
     </nav>
