--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,7 @@
 <header class="site-header {% if page.url == '/'' %} animated fadeInDown {% endif %}">
     <div class="header-wrapper">
-    <a href="{{site.url}}">
-        <img class="site-logo" width="40" src="{{site.url}}/site_imgs/ps_icon.png" alt="">
-        <h1>Pablo Selín</h1>
-    </a>
-    <nav class="main-nav">
-        <ul>
-            <li {% if page.url == '/works.html' %} class="active" {% endif %}><a href="{{site.url}}/works.html">Works</a></li>
-            <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
-            <!-- <li {% if page.url == '/dibujos.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">Drawings</a></li> -->
-            <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">data</a></li>
-        </ul>
-    </nav>
-    <nav id="mobile-menu" class="mobile-nav">
-    <a id="trigger-nav" href="#" class="mobile-trigger">&gt; menu</a>
-    <ul class="hidden-nav">
-        <li {% if page.url == '/works.html' %} class="active" {% endif %}><a href="{{site.url}}/works.html">Works</a></li>
-        <li {% if page.url == '/comics.html' %} class="active" {% endif %}><a href="{{site.url}}/comics.html">Comics</a></li>
-        <!-- <li {% if page.url == '/Drawings.html' %} class="active" {% endif %}><a href="{{site.url}}/dibujos.html">drawings</a></li> -->
-        <li {% if page.url == '/datos.html' %} class="active" {% endif %}><a href="{{site.url}}/datos.html">data</a></li>
-    </ul>
-    </nav>
+    
+    <h1>Pablo Selín</h1>
+    <p>pabloselin@gmail.com</p>
     </div>
 </header>
