--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 
 @charset "utf-8"; // Our variables
 $base-font-family: sans-serif;
-$headings-font-family: "Raleway", sans-serif;
+$headings-font-family: sans-serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
 $small-font-size: $base-font-size * 0.875;
@@ -24,7 +24,7 @@ $on-laptop: 800px; // Use media queries like this: // @include media-query($on-p
         @content;
     }
 } // Import partials from `sass_dir` (defaults to `_sass`)
-@import "base", "grid", "animate", "header", "panel", "comics-list", "drawing",
+@import "base", "grid", "header", "panel", "comics-list", "drawing",
     "single-comic", "outpost", "incas", "series", "muestra", "zooms";
 body.home {
     background:white;
