--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,8 +12,9 @@ header.site-header {
     
 
     h1 {
-        margin-top: 48px;
+        margin-top: 12px;
         font-size: 18px;
+        margin-bottom: 0;
         //text-transform:lowercase;
         line-height: 40px;
         vertical-align: middle;
